package com.edu.upc.ilanguagesession.command.domain;

public enum SessionStatus {
    ACTIVE,
    INACTIVE
}
